# NickedIn

backend/: config.py  database.py  main.py  pyproject.toml
backend/migrations/: init.sql  inti.sql
frontend/: package-lock.json  package.json
