[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromium>=0.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]
